--- a/.github/workflows/build-openwrt_main.yml
+++ b/.github/workflows/build-openwrt_main.yml
@@ -272,7 +272,8 @@ jobs:
                 "TOOLCHAIN_TAG": "${{env.TOOLCHAIN_TAG}}",
                 "APP_CONFIG": "${{env.APP_CONFIG}}",
                 "ssh": "${{env.ssh}}",
-                "ssh_quick": "${{env.ssh_quick}}"
+                "ssh_quick": "${{env.ssh_quick}}",
+                "SOURCE_URL": "${{env.SOURCE_URL}}"
 
               }
             }
